project2/parse/parser.output
Grammar

    0 $accept: Start $end

    1 Start: Function

    2 Function: Function T_PROC ID '(' VariableDeclaration ')' T_RET VariableType Body
    3         | T_PROC ID '(' VariableDeclaration ')' T_RET VariableType Body

    4 Body: '{' Function VariableDeclaration3 Body2 Return '}'
    5     | '{' Function Body2 Return '}'
    6     | '{' Function VariableDeclaration3 Return '}'
    7     | '{' Function Return '}'
    8     | '{' VariableDeclaration3 Return '}'
    9     | '{' VariableDeclaration3 Body2 Return '}'
   10     | '{' Body2 Return '}'
   11     | '{' Return '}'

   12 Body2: IfWhile Body2
   13      | IfWhile
   14      | Statement Body2
   15      | Statement
   16      | Body3 Body2
   17      | Body3

   18 Body3: '{' VariableDeclaration3 Body2 '}'
   19      | '{' VariableDeclaration3 '}'
   20      | '{' Body2 '}'
   21      | '{' '}'

   22 Statement: Expression ';'
   23          | Assignment ';'
   24          | FunctionStatement ';'

   25 Expression: Expression T_PLUS Term
   26           | Expression T_MINUS Term
   27           | Term

   28 Term: Term T_TIMES Factor
   29     | Term T_FSLASH Factor
   30     | Term '%' Factor
   31     | Term T_AND Factor
   32     | Term T_OR Factor
   33     | Term T_EQEQ Factor
   34     | Term T_LTE Factor
   35     | Term T_LT Factor
   36     | Term T_GTE Factor
   37     | Term T_GT Factor
   38     | Term T_NOTEQ Factor
   39     | Factor

   40 Factor: '(' Expression ')'
   41       | Integers
   42       | T_MINUS Factor
   43       | T_PLUS Factor
   44       | T_DEREF Factor
   45       | T_NOT Factor
   46       | T_FALSE
   47       | T_TRUE
   48       | ID
   49       | T_NULL

   50 Assignment: ID T_EQ Expression
   51           | ID T_EQ T_STRING
   52           | ID T_EQ T_CHARACTER

   53 Integers: T_INTBIN
   54         | '|' T_INTBIN '|'
   55         | T_INTOCT
   56         | '|' T_INTOCT '|'
   57         | T_INTDEC
   58         | '|' T_INTDEC '|'
   59         | T_INTHEX
   60         | '|' T_INTHEX '|'

   61 VariableType: T_INT
   62             | T_INTPTR
   63             | T_BOOL
   64             | T_STR '[' Integers ']'
   65             | T_CHAR
   66             | T_CHARPTR

   67 VariableDeclaration: VariableDeclaration2
   68                    | %empty

   69 VariableDeclaration2: VariablesDeclaration VariableType
   70                     | VariableDeclaration2 ';' VariablesDeclaration VariableType

   71 VariableDeclaration3: T_VAR VariablesDeclaration VariableType ';'
   72                     | VariableDeclaration3 T_VAR VariablesDeclaration VariableType ';'

   73 VariablesDeclaration: ID ',' VariablesDeclaration
   74                     | ID ':'

   75 IfWhile: T_IF '(' Expression ')' '{' Body2 '}'
   76        | T_IF '(' Expression ')' '{' '}'
   77        | T_IF '(' Expression ')' '{' Body2 '}' Else
   78        | T_WHILE '(' Expression ')' '{' '}'
   79        | T_WHILE '(' Expression ')' '{' Body2 '}'

   80 Else: T_ELSE '{' Body2 '}'

   81 ID: T_ID
   82   | '|' T_ID '|'
   83   | T_ID '[' Expression ']'
   84   | T_ADDRESS T_ID
   85   | T_ADDRESS T_ID '[' Expression ']'

   86 FunctionStatement: ID T_EQ FunctionCall

   87 FunctionCall: ID '(' FunctionExpression1 ')'

   88 FunctionExpression1: FunctionExpression
   89                    | %empty

   90 FunctionExpression: Expression ',' FunctionExpression
   91                   | Expression

   92 Return: T_RET Expression ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 30
'(' (40) 2 3 40 75 76 77 78 79 87
')' (41) 2 3 40 75 76 77 78 79 87
',' (44) 73 90
':' (58) 74
';' (59) 22 23 24 70 71 72 92
'[' (91) 64 83 85
']' (93) 64 83 85
'{' (123) 4 5 6 7 8 9 10 11 18 19 20 21 75 76 77 78 79 80
'|' (124) 54 56 58 60 82
'}' (125) 4 5 6 7 8 9 10 11 18 19 20 21 75 76 77 78 79 80
error (256)
T_OR (258) 32
T_AND (259) 31
T_LT (260) 35
T_LTE (261) 34
T_GT (262) 37
T_GTE (263) 36
T_NOTEQ (264) 38
T_EQEQ (265) 33
T_PLUS (266) 25 43
T_MINUS (267) 26 42
T_ID (268) 81 82 83 84 85
T_STRING (269) 51
T_CHARACTER (270) 52
T_NOT (271) 45
T_BOOL (272) 63
T_CHAR (273) 65
T_INT (274) 61
T_STR (275) 64
T_INTPTR (276) 62
T_CHARPTR (277) 66
T_IF (278) 75 76 77
T_ELSE (279) 80
T_WHILE (280) 78 79
T_VAR (281) 71 72
T_PROC (282) 2 3
T_RET (283) 2 3 92
T_NULL (284) 49
T_FSLASH (285) 29
T_EQ (286) 50 51 52 86
T_ADDRESS (287) 84 85
T_DEREF (288) 44
T_TRUE (289) 47
T_FALSE (290) 46
T_INTBIN (291) 53 54
T_INTOCT (292) 55 56
T_INTDEC (293) 57 58
T_INTHEX (294) 59 60
T_TIMES (295) 28


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Start (53)
    on left: 1, on right: 0
Function (54)
    on left: 2 3, on right: 1 2 4 5 6 7
Body (55)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
Body2 (56)
    on left: 12 13 14 15 16 17, on right: 4 5 9 10 12 14 16 18 20 75
    77 79 80
Body3 (57)
    on left: 18 19 20 21, on right: 16 17
Statement (58)
    on left: 22 23 24, on right: 14 15
Expression (59)
    on left: 25 26 27, on right: 22 25 26 40 50 75 76 77 78 79 83 85
    90 91 92
Term (60)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39, on right: 25 26 27
    28 29 30 31 32 33 34 35 36 37 38
Factor (61)
    on left: 40 41 42 43 44 45 46 47 48 49, on right: 28 29 30 31 32
    33 34 35 36 37 38 39 42 43 44 45
Assignment (62)
    on left: 50 51 52, on right: 23
Integers (63)
    on left: 53 54 55 56 57 58 59 60, on right: 41 64
VariableType (64)
    on left: 61 62 63 64 65 66, on right: 2 3 69 70 71 72
VariableDeclaration (65)
    on left: 67 68, on right: 2 3
VariableDeclaration2 (66)
    on left: 69 70, on right: 67 70
VariableDeclaration3 (67)
    on left: 71 72, on right: 4 6 8 9 18 19 72
VariablesDeclaration (68)
    on left: 73 74, on right: 69 70 71 72 73
IfWhile (69)
    on left: 75 76 77 78 79, on right: 12 13
Else (70)
    on left: 80, on right: 77
ID (71)
    on left: 81 82 83 84 85, on right: 2 3 48 50 51 52 73 74 86 87
FunctionStatement (72)
    on left: 86, on right: 24
FunctionCall (73)
    on left: 87, on right: 86
FunctionExpression1 (74)
    on left: 88 89, on right: 87
FunctionExpression (75)
    on left: 90 91, on right: 88 90
Return (76)
    on left: 92, on right: 4 5 6 7 8 9 10 11


State 0

    0 $accept: . Start $end

    T_PROC  shift, and go to state 1

    Start     go to state 2
    Function  go to state 3


State 1

    3 Function: T_PROC . ID '(' VariableDeclaration ')' T_RET VariableType Body

    T_ID       shift, and go to state 4
    T_ADDRESS  shift, and go to state 5
    '|'        shift, and go to state 6

    ID  go to state 7


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 8


State 3

    1 Start: Function .
    2 Function: Function . T_PROC ID '(' VariableDeclaration ')' T_RET VariableType Body

    T_PROC  shift, and go to state 9

    $default  reduce using rule 1 (Start)


State 4

   81 ID: T_ID .
   83   | T_ID . '[' Expression ']'

    '['  shift, and go to state 10

    $default  reduce using rule 81 (ID)


State 5

   84 ID: T_ADDRESS . T_ID
   85   | T_ADDRESS . T_ID '[' Expression ']'

    T_ID  shift, and go to state 11


State 6

   82 ID: '|' . T_ID '|'

    T_ID  shift, and go to state 12


State 7

    3 Function: T_PROC ID . '(' VariableDeclaration ')' T_RET VariableType Body

    '('  shift, and go to state 13


State 8

    0 $accept: Start $end .

    $default  accept


State 9

    2 Function: Function T_PROC . ID '(' VariableDeclaration ')' T_RET VariableType Body

    T_ID       shift, and go to state 4
    T_ADDRESS  shift, and go to state 5
    '|'        shift, and go to state 6

    ID  go to state 14


State 10

   83 ID: T_ID '[' . Expression ']'

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Expression  go to state 28
    Term        go to state 29
    Factor      go to state 30
    Integers    go to state 31
    ID          go to state 32


State 11

   84 ID: T_ADDRESS T_ID .
   85   | T_ADDRESS T_ID . '[' Expression ']'

    '['  shift, and go to state 33

    $default  reduce using rule 84 (ID)


State 12

   82 ID: '|' T_ID . '|'

    '|'  shift, and go to state 34


State 13

    3 Function: T_PROC ID '(' . VariableDeclaration ')' T_RET VariableType Body

    T_ID       shift, and go to state 4
    T_ADDRESS  shift, and go to state 5
    '|'        shift, and go to state 6

    $default  reduce using rule 68 (VariableDeclaration)

    VariableDeclaration   go to state 35
    VariableDeclaration2  go to state 36
    VariablesDeclaration  go to state 37
    ID                    go to state 38


State 14

    2 Function: Function T_PROC ID . '(' VariableDeclaration ')' T_RET VariableType Body

    '('  shift, and go to state 39


State 15

   43 Factor: T_PLUS . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 40
    Integers  go to state 31
    ID        go to state 32


State 16

   42 Factor: T_MINUS . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 41
    Integers  go to state 31
    ID        go to state 32


State 17

   45 Factor: T_NOT . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 42
    Integers  go to state 31
    ID        go to state 32


State 18

   49 Factor: T_NULL .

    $default  reduce using rule 49 (Factor)


State 19

   44 Factor: T_DEREF . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 43
    Integers  go to state 31
    ID        go to state 32


State 20

   47 Factor: T_TRUE .

    $default  reduce using rule 47 (Factor)


State 21

   46 Factor: T_FALSE .

    $default  reduce using rule 46 (Factor)


State 22

   53 Integers: T_INTBIN .

    $default  reduce using rule 53 (Integers)


State 23

   55 Integers: T_INTOCT .

    $default  reduce using rule 55 (Integers)


State 24

   57 Integers: T_INTDEC .

    $default  reduce using rule 57 (Integers)


State 25

   59 Integers: T_INTHEX .

    $default  reduce using rule 59 (Integers)


State 26

   40 Factor: '(' . Expression ')'

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Expression  go to state 44
    Term        go to state 29
    Factor      go to state 30
    Integers    go to state 31
    ID          go to state 32


State 27

   54 Integers: '|' . T_INTBIN '|'
   56         | '|' . T_INTOCT '|'
   58         | '|' . T_INTDEC '|'
   60         | '|' . T_INTHEX '|'
   82 ID: '|' . T_ID '|'

    T_ID      shift, and go to state 12
    T_INTBIN  shift, and go to state 45
    T_INTOCT  shift, and go to state 46
    T_INTDEC  shift, and go to state 47
    T_INTHEX  shift, and go to state 48


State 28

   25 Expression: Expression . T_PLUS Term
   26           | Expression . T_MINUS Term
   83 ID: T_ID '[' Expression . ']'

    T_PLUS   shift, and go to state 49
    T_MINUS  shift, and go to state 50
    ']'      shift, and go to state 51


State 29

   27 Expression: Term .
   28 Term: Term . T_TIMES Factor
   29     | Term . T_FSLASH Factor
   30     | Term . '%' Factor
   31     | Term . T_AND Factor
   32     | Term . T_OR Factor
   33     | Term . T_EQEQ Factor
   34     | Term . T_LTE Factor
   35     | Term . T_LT Factor
   36     | Term . T_GTE Factor
   37     | Term . T_GT Factor
   38     | Term . T_NOTEQ Factor

    T_OR      shift, and go to state 52
    T_AND     shift, and go to state 53
    T_LT      shift, and go to state 54
    T_LTE     shift, and go to state 55
    T_GT      shift, and go to state 56
    T_GTE     shift, and go to state 57
    T_NOTEQ   shift, and go to state 58
    T_EQEQ    shift, and go to state 59
    T_FSLASH  shift, and go to state 60
    T_TIMES   shift, and go to state 61
    '%'       shift, and go to state 62

    $default  reduce using rule 27 (Expression)


State 30

   39 Term: Factor .

    $default  reduce using rule 39 (Term)


State 31

   41 Factor: Integers .

    $default  reduce using rule 41 (Factor)


State 32

   48 Factor: ID .

    $default  reduce using rule 48 (Factor)


State 33

   85 ID: T_ADDRESS T_ID '[' . Expression ']'

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Expression  go to state 63
    Term        go to state 29
    Factor      go to state 30
    Integers    go to state 31
    ID          go to state 32


State 34

   82 ID: '|' T_ID '|' .

    $default  reduce using rule 82 (ID)


State 35

    3 Function: T_PROC ID '(' VariableDeclaration . ')' T_RET VariableType Body

    ')'  shift, and go to state 64


State 36

   67 VariableDeclaration: VariableDeclaration2 .
   70 VariableDeclaration2: VariableDeclaration2 . ';' VariablesDeclaration VariableType

    ';'  shift, and go to state 65

    $default  reduce using rule 67 (VariableDeclaration)


State 37

   69 VariableDeclaration2: VariablesDeclaration . VariableType

    T_BOOL     shift, and go to state 66
    T_CHAR     shift, and go to state 67
    T_INT      shift, and go to state 68
    T_STR      shift, and go to state 69
    T_INTPTR   shift, and go to state 70
    T_CHARPTR  shift, and go to state 71

    VariableType  go to state 72


State 38

   73 VariablesDeclaration: ID . ',' VariablesDeclaration
   74                     | ID . ':'

    ','  shift, and go to state 73
    ':'  shift, and go to state 74


State 39

    2 Function: Function T_PROC ID '(' . VariableDeclaration ')' T_RET VariableType Body

    T_ID       shift, and go to state 4
    T_ADDRESS  shift, and go to state 5
    '|'        shift, and go to state 6

    $default  reduce using rule 68 (VariableDeclaration)

    VariableDeclaration   go to state 75
    VariableDeclaration2  go to state 36
    VariablesDeclaration  go to state 37
    ID                    go to state 38


State 40

   43 Factor: T_PLUS Factor .

    $default  reduce using rule 43 (Factor)


State 41

   42 Factor: T_MINUS Factor .

    $default  reduce using rule 42 (Factor)


State 42

   45 Factor: T_NOT Factor .

    $default  reduce using rule 45 (Factor)


State 43

   44 Factor: T_DEREF Factor .

    $default  reduce using rule 44 (Factor)


State 44

   25 Expression: Expression . T_PLUS Term
   26           | Expression . T_MINUS Term
   40 Factor: '(' Expression . ')'

    T_PLUS   shift, and go to state 49
    T_MINUS  shift, and go to state 50
    ')'      shift, and go to state 76


State 45

   54 Integers: '|' T_INTBIN . '|'

    '|'  shift, and go to state 77


State 46

   56 Integers: '|' T_INTOCT . '|'

    '|'  shift, and go to state 78


State 47

   58 Integers: '|' T_INTDEC . '|'

    '|'  shift, and go to state 79


State 48

   60 Integers: '|' T_INTHEX . '|'

    '|'  shift, and go to state 80


State 49

   25 Expression: Expression T_PLUS . Term

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Term      go to state 81
    Factor    go to state 30
    Integers  go to state 31
    ID        go to state 32


State 50

   26 Expression: Expression T_MINUS . Term

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Term      go to state 82
    Factor    go to state 30
    Integers  go to state 31
    ID        go to state 32


State 51

   83 ID: T_ID '[' Expression ']' .

    $default  reduce using rule 83 (ID)


State 52

   32 Term: Term T_OR . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 83
    Integers  go to state 31
    ID        go to state 32


State 53

   31 Term: Term T_AND . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 84
    Integers  go to state 31
    ID        go to state 32


State 54

   35 Term: Term T_LT . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 85
    Integers  go to state 31
    ID        go to state 32


State 55

   34 Term: Term T_LTE . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 86
    Integers  go to state 31
    ID        go to state 32


State 56

   37 Term: Term T_GT . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 87
    Integers  go to state 31
    ID        go to state 32


State 57

   36 Term: Term T_GTE . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 88
    Integers  go to state 31
    ID        go to state 32


State 58

   38 Term: Term T_NOTEQ . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 89
    Integers  go to state 31
    ID        go to state 32


State 59

   33 Term: Term T_EQEQ . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 90
    Integers  go to state 31
    ID        go to state 32


State 60

   29 Term: Term T_FSLASH . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 91
    Integers  go to state 31
    ID        go to state 32


State 61

   28 Term: Term T_TIMES . Factor

    T_PLUS     shift, and go to state 15
    T_MINUS    shift, and go to state 16
    T_ID       shift, and go to state 4
    T_NOT      shift, and go to state 17
    T_NULL     shift, and go to state 18
    T_ADDRESS  shift, and go to state 5
    T_DEREF    shift, and go to state 19
    T_TRUE     shift, and go to state 20
    T_FALSE    shift, and go to state 21
    T_INTBIN   shift, and go to state 22
    T_INTOCT   shift, and go to state 23
    T_INTDEC   shift, and go to state 24
    T_INTHEX   shift, and go to state 25
    '('        shift, and go to state 26
    '|'        shift, and go to state 27

    Factor    go to state 92
    Integers  go to state 31
    ID        go to state 32


State 62

   30 Term: Term '%' . Factor
